# Klondy-bot

./: .gitignore  Cargo.toml  README.md  SCORE_OPTIMIZATION.md
.claude/: settings.json
Img/ranks/: README.md
Img/suits/: README.md
loneadapter/: Cargo.toml
loneadapter/src/: adapter.rs  driver.rs  lib.rs
loneadapter/src/adapters/: mod.rs  solitaire_cash.rs  solitaire_cash_macos.rs  solitaire_cash_templates.rs
lonecli/: Cargo.toml
lonecli/src/: calibration_tool.rs  main.rs  screenshot_debug.rs  solitaire_cash_calibrator.html
src/: deck.rs  hidden.rs  hop_solver.rs  lib.rs  mcts_solver.rs  partial.rs  stack.rs  standard.rs  tracking.rs
