[package]
name = "loneadapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
lonelybot = { path = "../" }
rand = { version = "0.9.0", features = ["small_rng"] }
thiserror = "2"
arrayvec = "0.7.6"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
